# routes/routes.go
@@ -16,5 +16,6 @@ func RegisterRoutes(e *echo.Echo) {
 	api_v1.POST("/auth/signup", handlers.SignupHandler)
 	api_v1.POST("/auth/login", handlers.LoginHandler)
 	api_v1.POST("/exchanges/", handlers.CreateExchangeHandler, middlewares.VerifySessionMiddleware)
+	api_v1.GET("/users/", handlers.GetUserHandler, middlewares.VerifySessionMiddleware)
 	commons.Logger.Info("v1 routes registered successfully")
 }
